--- a/books/templates/books/index.html
+++ b/books/templates/books/index.html
@@ -91,6 +91,7 @@
             </div>
         </form>
             <center><a href="{%url 'checkloginstatus'%}" style="text-align: center;">Already have an account?</a></center>
+            <center><span style="text-align: center;">{{message}}</span></center>
             <div id="message" style="text-align: center;">
                 <h3>Password must contain the following:</h3>
                 <p id="letter" class="invalid">A <b>lowercase</b> letter</p>
